# halcon_onnx_deploy

./: LICENSE  README.md  onnx_halcon.hdev  onnx_halcon.txt  onnx_pytorch_convert.py
deploy/: CMakeLists.txt  HalconProcess.cpp  HalconProcess.h  OrtHelper.cpp  OrtHelper.h  OrtModel.cpp  OrtModel.h  main.cpp
